syntax = "proto3";

package chief_of_state;

option java_package = "com.namely.protobuf.chief_of_state";

import "google/protobuf/any.proto";

service ChiefOfStateService {
    rpc ProcessCommand (ProcessCommandRequest) returns (ProcessCommandResponse);
}


message ProcessCommandRequest {
    string entity_uuid = 1;
    google.protobuf.Any command = 2;
}

message ProcessCommandResponse {
    google.protobuf.Any state = 1;
    google.protobuf.Any meta = 2;
}
